# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  diff_builder.py  diff_generator.py  difference.py  loaders.py  stylish.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/nested/: json
tests/fixtures/plain/: json
